# auto-podcast

./: .gitignore  README.md  feed.xml  pyproject.toml  requirements.txt
app/: main.py  prompts.py  rss_utils.py  storage.py
